tdf#145068 sw change tracking: adjust numbering of changed list items

Change formatting of the number of the moved list item,
not the next one.

Follow-up to commit commit 173b7fcaae86980809889db30ddb82f8ba883103
"tdf#42748 show changes of list numbers and bullets".

Change-Id: I4c029f708eb10808f72d44892b986a8fade47f42